fix(difficulty.js): fix for modes containers not showing full border

--- a/styles/style.css
+++ b/styles/style.css
@@ -746,7 +746,7 @@ select > option {
         width: 95%;
     }
     .mode {
-        height: 65%;
+        height: 70%;
         font-size: 1.25em;
         margin: 2% 1%;
     }
